# agentci

./: .dockerignore  .gitignore  .npmignore  .prettierignore  API.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  THIRD_PARTY_NOTICES.txt  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: coverage.md
docs/adr/: 001-metadata-only-recording.md  002-no-sandbox.md  003-no-llm-capture.md  004-fail-open-design.md  005-local-first-default.md  006-open-core-boundary.md  (+2 more)
examples/: demo_agent.js  demo_agent_rogue.js  demo_agent_safe.js  run_demo.sh  run_screencast.sh
github-action/: README.md  action.yml
policy-packs/: no_dotenv_access.yaml  no_new_egress.yaml  no_secret_env_reads.yaml  subprocess_allowlist_only.yaml
python/: .gitignore  README.md  pyproject.toml
python/agentci_recorder/: __init__.py  _bootstrap.py  canonicalize.py  cli.py  logger.py  recorder.py  types.py  writer.py
python/agentci_recorder/patches/: __init__.py  env_sensitive.py  filesystem.py  network.py  subprocess_patch.py
python/tests/: test_recorder.py
tests/: canonicalize.test.ts  crash-recovery.test.ts  cross-runtime.test.ts  dashboard-security.test.ts  diff.test.ts  fetch-patch.test.ts  fuzz.test.ts  integration.test.ts  integrity-secrets.test.ts  integrity.test.ts  license.test.ts  policy.test.ts  property.test.ts  remote.test.ts  schema.test.ts  signature-golden.test.ts  similarity.test.ts  summarize.test.ts  symlink.test.ts  writer-ratelimit.test.ts  writer.test.ts
(+49 files in other folders)
