[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentci-recorder"
version = "0.1.0"
description = "Python flight recorder for agentic programs - records observable side-effects"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "tldextract>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
agentci-record = "agentci_recorder.cli:main"

[tool.setuptools.packages.find]
include = ["agentci_recorder*"]
